--- a/ordering-service.properties
+++ b/ordering-service.properties
@@ -1,17 +1,23 @@
-example.property= I AM THE DEFAULT
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database=POSTGRESQL
-spring.sql.init.platform=postgres
+# ????? ?????????
+example.property=I AM THE DEFAULT
+
+# ????????? JPA
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# ????????? DataSource
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.dbcp2.test-while-idle=true
 spring.datasource.dbcp2.validation-query=SELECT 1
+
+# ????????? Actuator
 management.endpoints.web.exposure.exclude=*
 management.endpoints.access.default=unrestricted
 
-eureka.instance.preferIpAddress = true
-eureka.client.registerWithEureka = true
-eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
+# ????????? Eureka
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
