product service config

--- a/ordering-service.properties
+++ b/ordering-service.properties
@@ -1,22 +1,17 @@
-# ????? ?????????
 example.property=I AM THE DEFAULT
 
-# ????????? JPA
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# ????????? DataSource
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.dbcp2.test-while-idle=true
 spring.datasource.dbcp2.validation-query=SELECT 1
 
-# ????????? Actuator
 management.endpoints.web.exposure.exclude=*
 management.endpoints.access.default=unrestricted
 
-# ????????? Eureka
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
