--- a/product-service.properties
+++ b/product-service.properties
@@ -1,6 +1,7 @@
 example.property=I AM THE DEFAULT
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.hbm2ddl.schema=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
