--- a/ordering-service-dev.yml
+++ b/ordering-service-dev.yml
@@ -30,7 +30,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info  # Включаем health и info endpoints
+        include: health,info, circuitbreakers  # Включаем health и info endpoints
   endpoint:
     health:
       show-details: always    # Показывать детали health status
