--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -11,6 +11,6 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka
+      defaultZone: http://localhost:8761/eureka
   server:
     waitTimeInMsWhenSyncEmpty: 5
