--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,16 +1,16 @@
 spring:
   application:
-    name: eureka-server
+    name: eurekaserver
 server:
   port: 8761
 eureka:
   instance:
     preferIpAddress: true
-    hostname: eureka-server
+    hostname: eurekaserver
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka
+      defaultZone: http://eurekaserver:8761/eureka
   server:
     waitTimeInMsWhenSyncEmpty: 5
