--- a/ordering-service-dev.yml
+++ b/ordering-service-dev.yml
@@ -43,4 +43,4 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka/
+      defaultZone: http://eurekaserver:8761/eureka/
