product service config

--- a/product-service-dev.yml
+++ b/product-service-dev.yml
@@ -3,7 +3,7 @@ xample.property: I AM DEV
 # Настройки базы данных
 spring:
   datasource:
-    url: jdbc:postgresql://database:5432/order_system_dev
+    url: jdbc:postgresql://localhost:5432/order_system_dev # jdbc:postgresql://database:5432/order_system_dev
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
