--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -11,6 +11,6 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://eurekaserver:8761/eureka
+      defaultZone: http://localhost:8761/eureka #http://eurekaserver:8761/eureka
   server:
     waitTimeInMsWhenSyncEmpty: 5
